--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,9 @@ environment:
     - PYTHON: "C:\\Python38"
       TOX_ENV: "py38"
 
+    - PYTHON: "C:\\Python39"
+      TOX_ENV: "py39"
+
 init:
   - "%PYTHON%/python -V"
   - "%PYTHON%/python -c \"import struct;print( 8 * struct.calcsize(\'P\'))\""
