--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # For more information about tox, see https://tox.readthedocs.io/en/latest/
 [tox]
-envlist = clean, py36,py37,py38,py39,flake8
+envlist = clean, py36,py37,py38,py39,pypy36,pypy37,flake8
 
 [testenv]
 deps =
