--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,20 @@
 # For more information about tox, see https://tox.readthedocs.io/en/latest/
 [tox]
-envlist = py36,py37,py38,py39,flake8
+envlist = clean, py36,py37,py38,py39,pypy36,pypy37,flake8
 
 [testenv]
-deps = pytest>=3.0
-commands = pytest {posargs:tests}
+deps =
+    pytest>=3.0
+    pytest-cov
+commands = pytest --cov --cov-append --cov-report=term-missing {posargs:tests}
+passenv = CI TRAVIS TRAVIS_*
 
 [testenv:flake8]
 skip_install = true
 deps = flake8
 commands = flake8 pytest_tape.py setup.py tests
+
+[testenv:clean]
+deps = coverage
+skip_install = true
+commands = coverage erase
